create Custom annotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="messagegranted">Permission was granted</string>
     <string name="denied">Denied</string>
     <string name="messagedenied">Permission was Denied</string>
+    <string name="askAnnotation">askWithAnnotation</string>
 </resources>
